# simpletd

./: .gitignore  README.md  pyproject.toml
libs/shared-protocol/: pyproject.toml
libs/shared-protocol/src/shared_protocol/: __init__.py  types_ws.py
services/node/: config.py  config.template.toml  daemon.py  main.py  pyproject.toml
services/server/: config.py  config.template.toml  database.py  db_models.py  main.py  pyproject.toml
services/server/db/: models.py  schemas.py
services/server/endpoints/: __init__.py  healthcheck.py  videos.py  ws.py
