[project]
name = "node"
version = "0.1.0"
description = "simpletd node"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "shared-protocol",
    "tomli-w>=1.2.0",
    "typer>=0.26.8",
    "websockets>=16.0",
]

[tool.uv.sources]
shared-protocol = { workspace = true }
