[project]
name = "server"
version = "0.1.0"
description = "simpletd server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.138.2",
    "pydantic>=2.13.4",
    "shared-protocol",
    "sqlmodel>=0.0.39",
    "websockets>=16.0",
]

[tool.uv.sources]
shared-protocol = { workspace = true }

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
